Version 4o
ChatGPT ordna om mobil ekisterer verifiseringen!